assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: jinkaiFont;
    src: url("https://cdn.jsdelivr.net/gh/fzdwx/get@0.15/font/jinkai.woff2");
}

@font-face {
    font-family: f1Font-Bold;
    src: url("https://cdn.jsdelivr.net/gh/fzdwx/get@0.15/font/f2.woff2");
}

:root {
    --main-font: jinkaiFont, 'noto sans sc', 'microsoft yahei', '微软雅黑', 'sans-serif';
    --jet: "Jetbrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

.jet {
    font-family: var(--jet) !important;
}

.f1 {
    font-family: f1Font-Bold, var(--main-font);
}

.main-font {
    font-family: var(--main-font);
}

html {
    scroll-padding-top: 80px;
}

body {
    font-family: var(--main-font);
}

code {
    font-family: var(--jet) !important;
}


.m-center {
    @apply flex justify-center items-center
}

.m-con {
    @apply max-w-[90%] sm:w-[560px] lg:w-[780px]
}


.header-anchor {
    float: left;
    margin-left: -0.87em;
    padding-right: 0.23em;
    font-weight: 500;
    user-select: none;
    opacity: 0;
    transition: color 0.25s, opacity 0.25s;
}

.header-anchor::before {
    content: "#";
}

h1:hover .header-anchor,
h1 .header-anchor:focus,
h2:hover .header-anchor,
h2 .header-anchor:focus,
h3:hover .header-anchor,
h3 .header-anchor:focus,
h4:hover .header-anchor,
h4 .header-anchor:focus,
h5:hover .header-anchor,
h5 .header-anchor:focus,
h6:hover .header-anchor,
h6 .header-anchor:focus {
    opacity: 1;
}


pre {
    --scrollbar-thumb: #3b5178;
}

.dark pre {
    --scrollbar-thumb: #222222;
}

* {
    --scrollbar-track: initial;
    --scrollbar-thumb: initial;
    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
    scrollbar-width: thin;
    --scrollbar-thumb: #acbad2;
}

::-webkit-scrollbar-track {
    background-color: var(--scrollbar-track)
}

::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-thumb);
    border-radius: .25rem
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px
}

